k8s/jobs/ingress_nginx_authenticate_cookie/service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: http-app-service
spec: 
  ports: 
    - port: 5678
  selector: 
    app: http-server
---
apiVersion: v1
kind: Service
metadata: 
  name: authenticate-app-service
spec: 
  ports: 
    - port: 8080
  selector: 
    app: authenticate-app
