k8s/jobs/ingress_nginx_authenticate_cookie/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # ingress will scan it
    nginx.ingress.kubernetes.io/auth-url: "http://$host/authenticate"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/login"
spec:
  rules:
  - http:
      paths:
      - path: /docs/
        backend:
          serviceName: http-app-service
          servicePort: 5678
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authenciate-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # ingress will scan it
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: authenticate-app-service
          servicePort: 8080
